--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,15 @@ body {
   display: none;
 } 
 
+label:has(.pilgan-item > .pilgan) > span {
+  display: none;
+} 
+
+label[data-selected=true] .pilgan {
+  background-color: #006fee;
+  transition: all 0.16s ease;
+}
+
 .pilgan-item[data-selected=true] .pilgan {
   background-color: #006fee;
   transition: all 0.16s ease;
@@ -43,3 +52,4 @@ div:has(>.pilgan-item) {
   flex-direction: column;
   gap: 8px;
 }
+
